# toradh

./: .gitignore  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: build.yml  codecov.yml  formatting.yml  publish.yml
api/err_class_def/: index.html
api/nothing_class_def/: index.html
api/ok_class_def/: index.html
api/option_class_def/: index.html
api/result_intro/: index.html
api/some_class_def/: index.html
docs/: index.md  why_use_result.md
docs/api/: err_class_def.md  nothing_class_def.md  ok_class_def.md  option_class_def.md  result_intro.md  some_class_def.md
docs/css/: custom.css
examples/: cart_agg_with_toradh.py  cart_agg_without_toradh.py  user_not_found.py
search/: search_index.json
tests/: conftest.py  modern_tests.py  test_docs.py  test_optional.py  test_result.py
toradh/: __init__.py  option.py  result.py
why_use_result/: index.html
